--- a/index.html
+++ b/index.html
@@ -64,10 +64,11 @@
             border-radius: 9999px;
         }
         /* 3D Scroll Button Styling */
-        .scroll-button-container {
+      .scroll-button-container {
             position: fixed; /* Keep button fixed on screen */
-            bottom: 2rem;
+            bottom: 5rem;
             left: 85%;
+            width: 200px; /* Fixed width for the button */
             transform: translateX(-50%);
             z-index: 1000;
         }
